Comment date spacing issue

--- a/src/app/shared/comment/comment.component.scss
+++ b/src/app/shared/comment/comment.component.scss
@@ -388,8 +388,8 @@
     color: #929292;
     font-size: 11px;
     line-height: 18px;
-    margin-left: 8px;
-    display: inline;
+    margin-left: 0;
+    display: block;
 }
 
 .c-post__input {
@@ -495,8 +495,8 @@
     color: #929292;
     font-size: 11px;
     line-height: 18px;
-    margin-left: 8px;
-    display: inline;
+    margin-left: 0;
+    display: block;
 }
 .c-post__comment_rm {
     color: $color-theme;
